fix(admin): prevent UI Dialogs from stretching too far
When tall images are uploaded to the WYSIWYG editor, the dialog
was sometimes stretching far enough to obscure the Save/Cancel
buttons and prevent them from being used.

Refs: HRINFO-1157

--- a/html/themes/custom/hri_admin/css/admin.css
+++ b/html/themes/custom/hri_admin/css/admin.css
@@ -1,3 +1,16 @@
 /**
  * HR.info admin theme styles
  */
+
+/**
+ * Large images in WYSIWYG
+ *
+ * When large images get initially uploaded to the WYSIWYG editor, it's possible
+ * for the image to enlarge the editor so much that the Save/Cancel buttons are
+ * obscured, making it difficult to proceed without potential loss of content.
+ *
+ * We restrict the editor's height to avoid obscuring the buttons.
+ */
+.js .ui-dialog .ui-widget-content.ui-dialog-content {
+  max-height: calc(100vh - 160px) !important;
+}
